fixing code smells and bugs